# openstack-refapp

./: .gitignore  .gitreview  Dockerfile  README.rst  docker-compose.yaml  pyproject.toml  setup.cfg  tox.ini
heat-templates/: README.md  ovn-env.yaml  top.yaml
heat-templates/fragments/: AppInstances.yaml  DatabaseInstances.yaml  Network.yaml
heat-templates/scripts/: service_boot.sh  service_lib
heat-templates/tf/: top.yaml
heat-templates/tf/fragments/: AppFloatings.yaml  AppInstances.yaml  Auxiliary.yaml  DatabaseInstances.yaml  DatabasePorts.yaml  Network.yaml  Router.yaml
openstack_refapp/: app.py  conf.py  records.py  root.py  version.py
terraform/: 000-main.tf  001-input.tf  020-network.tf  050-instance_db.tf  060-instance_app.tf  070-loadbalancer.tf  080-output.tf  README.md
terraform/templates/: init.tpl  service_boot.tpl  service_lib
terraform/tfvars/: ovn.tfvars  ovs.tfvars
tests/: test_version.py
