[metadata]
name = openstack-refapp
author = Mirantis Inc
summary = Minimal app to validate clouds
description-file =
    README.rst
home-page = https://gerrit.mcp.mirantis.com
classifier =
    Development Status :: 1 - Alpha
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python-requires = >= 3.6
setup_requires =
    pbr

[files]
packages =
    openstack_refapp

[entry_points]
wsgi_scripts =
    os-refapp = openstack_refapp.app:create_app

[extras]
test =
    pytest
    flake8
    flake8-black
pgsql =
    pg8000
mysql =
    pymysql
serve =
    gunicorn
